fix overflow

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -4,7 +4,6 @@ input{
     height: 30px;
     outline: none;
     width: 100%;
-    font: unset;
 }
 
 @media screen and (min-width: 800px) {
