--- a/public/css/lostpsw.css
+++ b/public/css/lostpsw.css
@@ -9,8 +9,15 @@
     font-size: 16px;
 }
 .lostpsw h1{
-    font-size: 20px;
+    font-size: 18px;
     white-space: nowrap;
+}
+
+@media screen and (min-width: 450px) {
+    .lostpsw h1{
+        font-size: 24px;
+        white-space: nowrap;
+    }
 }
 
 @media screen and (min-width: 800px) {
